--- a/src/_templates/index/i-5.pug
+++ b/src/_templates/index/i-5.pug
@@ -6,13 +6,61 @@ section.index-5(data-bg="../assets/images/background/index-5.png")
 			.desc
 				p Biệt thự sân golf West Lakes Golf & Villas bao gồm 3 loại sản phẩm: Biệt thự mini, biệt thự đơn lập và biệt thự song lập. Các công trình đều được thiết kế và xây dựng theo phong cách đậm chất tân cổ điển, hiện đại trong kiến trúc và sang trọng về nội thất.
 	.map-index-5
-		.img
-			img(src="./assets/images/items/map-index-5.png", alt="")
-		.list-fixed-item
-			ul
-				li(data-bg-item="yellow").active
-					h5 Biệt thự mini - 1
-				li(data-bg-item="aqua")
-					h5 Biệt thự mini - 2
-				li(data-bg-item="pink")
-					h5 Biệt thự mini - 3
+		.index-5-main
+			.img
+				img(src="./assets/images/items/map-index-5.png", alt="")
+			.list-fixed-item
+				ul
+					li(data-target="matbang-1" data-bg-item="yellow")
+						h5 Biệt thự mini - 1
+					li(data-target="matbang-2" data-bg-item="aqua")
+						h5 Biệt thự mini - 2
+					li(data-target="matbang-3" data-bg-item="pink")
+						h5 Biệt thự mini - 3
+		.index-5-aside
+			.matbang-slide-controls
+				.map-index-4-slider-close
+					<svg xmlns="http://www.w3.org/2000/svg" width="10" height="21" viewBox="0 0 10 21"><text transform="translate(0 17)" fill="#fff" font-size="16" font-family="Roboto-Light, Roboto" font-weight="300"><tspan x="0" y="0">X</tspan></text></svg>
+				.map-index-4-slider-prev
+					<svg xmlns="http://www.w3.org/2000/svg" width="8.578" height="17.364" viewBox="0 0 8.578 17.364"><path d="M7.2,0,0,7.975l7.371,7.975" transform="translate(0.5 0.706)" fill="none" stroke="#fff" stroke-linecap="round" stroke-linejoin="round" stroke-width="1"/></svg>
+				.map-index-4-slider-next
+					<svg xmlns="http://www.w3.org/2000/svg" width="8.578" height="17.363" viewBox="0 0 8.578 17.363"><path d="M.171,0l7.2,7.975L0,15.951" transform="translate(0.707 0.706)" fill="none" stroke="#fff" stroke-linecap="round" stroke-linejoin="round" stroke-width="1"/></svg>
+			.matbang-slider#matbang-1
+				.swiper-container
+					.swiper-wrapper
+						.swiper-slide
+							img(src="./assets/matbang/1.png", alt="")
+						.swiper-slide
+							img(src="./assets/matbang/1.png", alt="")
+						.swiper-slide
+							img(src="./assets/matbang/1.png", alt="")
+						.swiper-slide
+							img(src="./assets/matbang/1.png", alt="")
+						.swiper-slide
+							img(src="./assets/matbang/1.png", alt="")
+			.matbang-slider#matbang-2
+				.swiper-container
+					.swiper-wrapper
+						.swiper-slide
+							img(src="./assets/matbang/1.png", alt="")
+						.swiper-slide
+							img(src="./assets/matbang/1.png", alt="")
+						.swiper-slide
+							img(src="./assets/matbang/1.png", alt="")
+						.swiper-slide
+							img(src="./assets/matbang/1.png", alt="")
+						.swiper-slide
+							img(src="./assets/matbang/1.png", alt="")
+			.matbang-slider#matbang-3
+				.swiper-container
+					.swiper-wrapper
+						.swiper-slide
+							img(src="./assets/matbang/1.png", alt="")
+						.swiper-slide
+							img(src="./assets/matbang/1.png", alt="")
+						.swiper-slide
+							img(src="./assets/matbang/1.png", alt="")
+						.swiper-slide
+							img(src="./assets/matbang/1.png", alt="")
+						.swiper-slide
+							img(src="./assets/matbang/1.png", alt="")
