fixed menu respon

--- a/src/_templates/_layout/_fixed-menu.pug
+++ b/src/_templates/_layout/_fixed-menu.pug
@@ -6,6 +6,8 @@
 	.block-item(type="text")
 		.item
 			.text NHẬN BÁO GIÁ
+			.icon
+				img.svg(data-src="./assets/icons/phone.svg", alt="PHONE")
 	.block-item
 		.item.css-selector
 			.icon
