--- a/src/_templates/_layout/_header.pug
+++ b/src/_templates/_layout/_header.pug
@@ -6,19 +6,19 @@ header
 			nav
 				ul
 					li.active
-						a(href="#") giới thiệu
+						a(href="#" data-scroll-to="1") giới thiệu
 					li
-						a(href="#") vị trí và tiện ích
+						a(href="#" data-scroll-to="2") vị trí và tiện ích
 					li
-						a(href="#") mặt bằng
+						a(href="#" data-scroll-to="3") mặt bằng
 					li
-						a(href="#") chương trình bán hàng
+						a(href="#" data-scroll-to="4") chương trình bán hàng
 					li
-						a(href="#") hỗ trợ tài chính
+						a(href="#" data-scroll-to="5") hỗ trợ tài chính
 					li
-						a(href="#") tiến độ
+						a(href="#" data-scroll-to="6") tiến độ
 					li
-						a(href="#") thư viện
+						a(href="#" data-scroll-to="7") thư viện
 			.toggle-menu-mobile
 			.language
 				ul
