--- a/src/_templates/index/i-6.pug
+++ b/src/_templates/index/i-6.pug
@@ -44,3 +44,30 @@ section.index-6(data-scroll-id="4" data-bg="../assets/images/background/index-6.
 									img(src="./assets/icons/icon-index-6__5.png", alt="")
 								.text
 									p Tặng ngay 1 cây vàng SJC trị giá lên đến 50TR
+	.d-none.d-n(hidden)
+		.index-6-popup#index-6-popup
+			h2 West Lakes Golf & Villas
+			hr
+			.price
+				h4 giá công khai chỉ từ
+				h3 2.850.000.000 VNĐ
+				p Chỉ cần thanh toán 15% bạn đã sở hữu ngay căn biệt thự view sân Golf đẳng cấp liền kề Tp Hồ Chí Minh.
+			.sale
+				ul
+					li
+						.icon
+							img(src="./assets/icons/icon-index-6__3.png", alt="")
+						.text
+							p Chiết khấu ngay 5% giá trị căn biệt thự
+					li
+						.icon
+							img(src="./assets/icons/icon-index-6__4.png", alt="")
+						.text
+							p Hỗ trợ hoàn thiện nhà lên đến 150TR đồng
+					li
+						.icon
+							img(src="./assets/icons/icon-index-6__5.png", alt="")
+						.text
+							p Tặng ngay 1 cây vàng SJC trị giá lên đến 50TR
+			.button
+				a.btn.btn-close(data-bg="./assets/images/background/btn-submit__2.png") Đăng ký ngay
