--- a/src/scss/pages/index/i-11.scss
+++ b/src/scss/pages/index/i-11.scss
@@ -1,5 +1,5 @@
 .index-11 {
-	margin-top: 110px;
+	padding-top: 110px;
 
 	@media (min-width: 1025px) {
 		.row {
@@ -108,7 +108,7 @@
 	}
 
 	@media (max-width: 1024.98px) {
-		margin-top: 50px;
+		padding-top: 50px;
 
 		.text-form {
 			.title {
