--- a/src/scss/pages/index/i-10.scss
+++ b/src/scss/pages/index/i-10.scss
@@ -1,5 +1,5 @@
 .index-10 {
-	margin-top: 105px;
+	padding-top: 105px;
 
 	.review-video {
 		.block-video {
@@ -132,7 +132,7 @@
 	}
 
 	@media (max-width: 1024.98px) {
-		margin-top: 50px;
+		padding-top: 50px;
 
 		.block-1 {
 			.desc {
