--- a/src/scss/pages/index/i-6.scss
+++ b/src/scss/pages/index/i-6.scss
@@ -12,7 +12,7 @@
 	}
 
 	.block-2 {
-		box-shadow: 0 5px 10px rgba($color: #000000, $alpha: .5);
+		box-shadow: 0 5px 10px rgba($color: #000000, $alpha: 0.5);
 
 		.block-content {
 			position: relative;
@@ -39,7 +39,7 @@
 			h3 {
 				font-size: 50px;
 				color: map-get($mau, main-1);
-				text-shadow: 0 3px 6px rgba($color: #000000, $alpha: .78);
+				text-shadow: 0 3px 6px rgba($color: #000000, $alpha: 0.78);
 			}
 
 			p {
@@ -83,7 +83,7 @@
 					}
 				}
 
-				li+li {
+				li + li {
 					padding-left: 15px;
 				}
 			}
@@ -124,7 +124,7 @@
 					}
 				}
 
-				li+li {
+				li + li {
 					padding-left: 15px;
 				}
 			}
@@ -191,7 +191,7 @@
 						}
 					}
 
-					li+li {
+					li + li {
 						padding-left: 15px;
 					}
 				}
@@ -221,7 +221,7 @@
 						}
 					}
 
-					li+li {
+					li + li {
 						padding-left: 15px;
 					}
 				}
@@ -266,31 +266,6 @@
 				}
 			}
 
-			.prioritize {
-				margin-top: 25px;
-				max-width: 100%;
-
-				h3 {
-					font-size: 18px;
-				}
-
-				ul {
-					margin-top: 25px;
-
-					li {
-						.text {
-							p {
-								font-size: 14px;
-							}
-						}
-					}
-
-					li+li {
-						padding-left: 15px;
-					}
-				}
-			}
-
 			.sale {
 				margin-top: 25px;
 
@@ -316,9 +291,253 @@
 						}
 					}
 
-					li+li {
+					li + li {
 						padding-left: 15px;
 					}
+				}
+			}
+
+			.prioritize {
+				margin-top: 25px;
+				max-width: 100%;
+
+				h3 {
+					font-size: 18px;
+				}
+
+				ul {
+					margin-top: 25px;
+
+					li {
+						.text {
+							p {
+								font-size: 14px;
+							}
+						}
+					}
+
+					li + li {
+						padding-left: 15px;
+					}
+				}
+			}
+		}
+	}
+}
+
+#index-6-popup.fancybox-content {
+	background: url('../assets/images/background/index-6__2.png');
+	background-repeat: no-repeat;
+	background-size: auto;
+	background-position: center;
+	max-width: 810px;
+	width: 100%;
+	max-height: 650px;
+	height: 100%;
+	border-radius: 16px;
+	.fancybox-close-small[data-fancybox-close] {
+		width: 52px;
+		height: 32px;
+		padding: 2px;
+		background-color: #dcc375;
+		opacity: 1;
+		border-top-right-radius: 16px;
+		border-bottom-left-radius: 16px;
+		svg {
+			path {
+				fill: map-get($mau, main);
+			}
+		}
+	}
+	&:before {
+		content: '';
+		position: absolute;
+		top: 12px;
+		bottom: 12px;
+		left: 12px;
+		right: 12px;
+		border: 1px solid #dcc375;
+		border-radius: 10px;
+		pointer-events: none;
+	}
+
+	.price {
+		text-align: center;
+		h4 {
+			font-size: 19px;
+			color: #ffffff;
+			text-transform: uppercase;
+			font-weight: 400;
+		}
+
+		h3 {
+			font-size: 60px;
+			color: map-get($mau, main-1);
+			text-shadow: 0 3px 6px rgba($color: #000000, $alpha: 0.78);
+		}
+
+		p {
+			color: #ffffff;
+			font-size: 16px;
+			max-width: 440px;
+			width: 100%;
+			margin: 0 auto;
+		}
+	}
+
+	.sale {
+		margin-top: 60px;
+
+		h3 {
+			font-size: 25px;
+			color: #ffffff;
+			text-transform: uppercase;
+		}
+
+		ul {
+			display: flex;
+			flex-wrap: wrap;
+			list-style-type: none;
+			padding-left: 0;
+
+			li {
+				-ms-flex: 0 0 33.3333%;
+				flex: 0 0 33.3333%;
+				max-width: 33.3333%;
+				text-align: center;
+
+				.icon {
+					margin-bottom: 10px;
+					height: 95px;
+					overflow: hidden;
+				}
+
+				.text {
+					p {
+						font-size: 16px;
+						color: #ffffff;
+					}
+				}
+			}
+
+			li + li {
+				padding-left: 15px;
+			}
+		}
+	}
+
+	h2 {
+		font-size: 25px;
+		color: white;
+		text-transform: uppercase;
+		text-align: center;
+	}
+	hr {
+		display: block;
+		width: 135px;
+		margin: 20px auto;
+	}
+
+	.button {
+		display: flex;
+		justify-content: center;
+		margin-top: 35px;
+		a {
+			width: 100%;
+			max-width: 135px;
+			height: 35px;
+			font-size: 14px;
+			color: map-get($mau, main);
+			text-transform: uppercase;
+			font-weight: 700;
+			cursor: pointer;
+		}
+	}
+
+	@media (max-width: 767.98px) {
+		padding: 44px 20px;
+		.price {
+			h4 {
+				font-size: 22px;
+			}
+
+			h3 {
+				font-size: 32px;
+			}
+
+			p {
+				font-size: 18px;
+			}
+		}
+
+		.sale {
+			margin-top: 25px;
+
+			h3 {
+				font-size: 22px;
+			}
+
+			ul {
+				li {
+					.icon {
+						height: 60px;
+						width: 30%;
+						margin: 0 auto 10px;
+					}
+
+					.text {
+						p {
+							font-size: 16px;
+						}
+					}
+				}
+
+				li + li {
+					padding-left: 15px;
+				}
+			}
+		}
+	}
+	@media (max-width: 575.98px) {
+		.price {
+			h4 {
+				font-size: 18px;
+			}
+
+			h3 {
+				font-size: 24px;
+			}
+
+			p {
+				font-size: 14px;
+			}
+		}
+
+		.sale {
+			margin-top: 25px;
+
+			h3 {
+				font-size: 18px;
+				color: #ffffff;
+				text-transform: uppercase;
+			}
+
+			ul {
+				li {
+					.icon {
+						width: 50%;
+						height: 50px;
+					}
+
+					.text {
+						p {
+							font-size: 14px;
+						}
+					}
+				}
+
+				li + li {
+					padding-left: 15px;
 				}
 			}
 		}
