--- a/src/scss/pages/index/i-9.scss
+++ b/src/scss/pages/index/i-9.scss
@@ -1,4 +1,13 @@
 .index-9 {
+	padding-top: 84px;
+
+	@media (max-width: 1024.98px) {
+		padding-top: 50px;
+	}
+
+	@media (max-width: 767.98px) {
+		padding-top: 25px;
+	}
 	.sub-title {
 		margin-top: 60px;
 
@@ -105,7 +114,6 @@
 					font-size: 16px;
 				}
 			}
-
 		}
 	}
 
