done news-detail

--- a/src/_templates/index/i-9.pug
+++ b/src/_templates/index/i-9.pug
@@ -11,7 +11,7 @@ section.index-9(data-scroll-id="6")
 				.swiper-container
 					.swiper-wrapper
 						.swiper-slide
-							.item
+							a(href="news-detail.html").item
 								.img.ov-h
 									img.ofcv(src="./assets/images/items/index-9__1.png", alt="")
 									.date(data-bg="../assets/images/background/item-date-index-9.png") 28/05/20
@@ -19,7 +19,7 @@ section.index-9(data-scroll-id="6")
 									h3.lcl.lcl-1 Lorem ipsum dolor
 									p.lcl.lcl-2 Lorem ipsum dolor sit amet, consectetuer adipiscing eli.
 						.swiper-slide
-							.item
+							a(href="news-detail.html").item
 								.img.ov-h
 									img.ofcv(src="./assets/images/items/index-9__2.png", alt="")
 									.date(data-bg="../assets/images/background/item-date-index-9.png") 28/05/20
@@ -27,7 +27,7 @@ section.index-9(data-scroll-id="6")
 									h3.lcl.lcl-1 Lorem ipsum dolor
 									p.lcl.lcl-2 Lorem ipsum dolor sit amet, consectetuer adipiscing eli.
 						.swiper-slide
-							.item
+							a(href="news-detail.html").item
 								.img.ov-h
 									img.ofcv(src="./assets/images/items/index-9__3.png", alt="")
 									.date(data-bg="../assets/images/background/item-date-index-9.png") 28/05/20
@@ -35,7 +35,7 @@ section.index-9(data-scroll-id="6")
 									h3.lcl.lcl-1 Lorem ipsum dolor
 									p.lcl.lcl-2 Lorem ipsum dolor sit amet, consectetuer adipiscing eli.
 						.swiper-slide
-							.item
+							a(href="news-detail.html").item
 								.img.ov-h
 									img.ofcv(src="./assets/images/items/index-9__1.png", alt="")
 									.date(data-bg="../assets/images/background/item-date-index-9.png") 28/05/20
@@ -43,7 +43,7 @@ section.index-9(data-scroll-id="6")
 									h3.lcl.lcl-1 Lorem ipsum dolor
 									p.lcl.lcl-2 Lorem ipsum dolor sit amet, consectetuer adipiscing eli.
 						.swiper-slide
-							.item
+							a(href="news-detail.html").item
 								.img.ov-h
 									img.ofcv(src="./assets/images/items/index-9__2.png", alt="")
 									.date(data-bg="../assets/images/background/item-date-index-9.png") 28/05/20
@@ -51,7 +51,7 @@ section.index-9(data-scroll-id="6")
 									h3.lcl.lcl-1 Lorem ipsum dolor
 									p.lcl.lcl-2 Lorem ipsum dolor sit amet, consectetuer adipiscing eli.
 						.swiper-slide
-							.item
+							a(href="news-detail.html").item
 								.img.ov-h
 									img.ofcv(src="./assets/images/items/index-9__3.png", alt="")
 									.date(data-bg="../assets/images/background/item-date-index-9.png") 28/05/20
