--- a/src/index.pug
+++ b/src/index.pug
@@ -20,5 +20,7 @@ block main
 		include _templates/index/i-9
 		include _templates/index/i-10
 		include _templates/index/i-11
+block fixed-menu
+	include _templates/_layout/_fixed-menu
 block scripts
 	script(src="./js/YoutubeController.min.js")
