--- a/src/_templates/_layout/_fixed-menu.pug
+++ b/src/_templates/_layout/_fixed-menu.pug
@@ -7,7 +7,7 @@
 		.item
 			.text NHẬN BÁO GIÁ
 			.icon
-				img.svg(data-src="./assets/icons/phone.svg", alt="PHONE")
+				img.svg(data-src="./assets/icons/quotation.svg", alt="PHONE")
 	.block-item
 		.item.css-selector
 			.icon
