--- a/src/_templates/index/i-2.pug
+++ b/src/_templates/index/i-2.pug
@@ -7,13 +7,13 @@ section.index-2(data-scroll-id="1" full-screen)
 						.block-content.mx-at(max-width='845px' data-bg="../assets/images/background/item_index-2__1.png")
 							.content.ta-c
 								.block-title.mx-at(max-width="600px")
-									h2 GIÁ TRỊ DỰ ÁN
-								.sub-title
+									h2.wow.fadeInLeft(data-wow-delay=".2s") GIÁ TRỊ DỰ ÁN
+								.sub-title.wow.fadeInLeft(data-wow-delay=".3s")
 									h3 West Lakes Golf & Villass
 									p Quần thể biệt thự nghỉ dưỡng ven đô,
 										br
 										| ôm trọn sân Golf đầu tiên ở phía Tây Thành phố Hồ Chí Minh
-								.desc
+								.desc.wow.fadeInLeft(data-wow-delay=".4s")
 									p Phát triển dựa trên những quy chuẩn kiến trúc khắt khe của sân Golf West Lakes - một sản phẩm của đơn vị thiết kế Thomson Perrett hàng đầu thế giới, chỉ cách trung tâm Tp.HCM chỉ hơn 30km nhưng quy tụ các tiện ích nội khu 5 sao đáp ứng nhu cầu nghỉ dưỡng xanh cao cấp của gia đình hiện đại.
 				.swiper-slide
 					.section(data-bg="../assets/images/background/index-2.2.png")
