--- a/src/_templates/index/i-7.pug
+++ b/src/_templates/index/i-7.pug
@@ -4,19 +4,19 @@ section.index-7(data-bg="../assets/images/background/index-7.png")
 			h2 GIẢI THƯỞNG ĐẶC BIỆT
 			.prize
 				ul
-					li
+					li.wow.fadeInLeft(data-wow-delay=".2s")
 						.img
 							img(src="./assets/images/items/prize-1.png", alt="")
 						.text.ta-c
 							p Voucher trị giá
 							span.cl-main-1 200.000.000 VNĐ
-					li
+					li.wow.fadeInDown(data-wow-delay=".2s")
 						.img
 							img(src="./assets/images/items/prize-2.png", alt="")
 						.text.ta-c
 							p Voucher trị giá
 							span.cl-main-1 50.000.000 VNĐ
-					li
+					li.wow.fadeInRight(data-wow-delay=".2s")
 						.img
 							img(src="./assets/images/items/prize-3.png", alt="")
 						.text.ta-c
