--- a/src/_templates/index/i-8.pug
+++ b/src/_templates/index/i-8.pug
@@ -7,31 +7,31 @@ section.index-8(data-scroll-id="5" data-bg="../assets/images/background/index-8.
 				.sub-title
 					p.ta-c "Đồng hành cùng Trần Anh Group phát triển dự án West Lakes Golf & Villas, .... cung cấp gói hỗ trợ tài chính như sau:
 			.list-item
-				.item
+				.item.wow.fadeInLeft(data-wow-delay=".2s")
 					.item-content(data-bg="../assets/images/background/item-index-8__1.png")
 						.icon
 							img.lazyload.blur-up(data-src="./assets/icons/icon-index-8__1.png", alt="")
 						.text.ta-c
 							p Lãi xuất 0% - 06 tháng đầu
-				.item
+				.item.wow.fadeInLeft(data-wow-delay=".3s")
 					.item-content(data-bg="../assets/images/background/item-index-8__2.png")
 						.icon
 							img.lazyload.blur-up(data-src="./assets/icons/icon-index-8__2.png", alt="")
 						.text.ta-c
 							p Ân hạn gốc lãi suất cố định 1% / tháng/ dư nợ gốc thực tế giảm dần cho 30 tháng.
-				.item
+				.item.wow.fadeInLeft(data-wow-delay=".4s")
 					.item-content(data-bg="../assets/images/background/item-index-8__1.png")
 						.icon
 							img.lazyload.blur-up(data-src="./assets/icons/icon-index-8__3.png", alt="")
 						.text.ta-c
 							p Vay lên đến 50% giá trị căn biệt thự
-				.item
+				.item.wow.fadeInLeft(data-wow-delay=".5s")
 					.item-content(data-bg="../assets/images/background/item-index-8__2.png")
 						.icon
 							img.lazyload.blur-up(data-src="./assets/icons/icon-index-8__4.png", alt="")
 						.text.ta-c
 							p Thời gian 36 tháng
-				.item
+				.item.wow.fadeInLeft(data-wow-delay=".6s")
 					.item-content(data-bg="../assets/images/background/item-index-8__1.png")
 						.icon
 							img.lazyload.blur-up(data-src="./assets/icons/icon-index-8__5.png", alt="")
