--- a/src/_templates/index/i-9.pug
+++ b/src/_templates/index/i-9.pug
@@ -3,7 +3,7 @@ section.index-9(data-scroll-id="6")
 		.block-content.mx-at(max-width='50%')
 			.content.ta-c
 				.block-title.mx-at(max-width="600px")
-					h2 TIẾN ĐỘ
+					h2.wow.fadeInLeft(data-wow-delay=".3s") TIẾN ĐỘ
 				.sub-title
 					p.ta-c Lorem ipsum dolor sit amet, consectetuer adipiscing eli. Lorem ipsum dolor sit amet, consectetuer adipiscing. Lorem ipsum dolor sit amet, consectetuer adipiscing,…
 		.list-item.mx-at(max-width="1360px")
