--- a/src/scss/_globals/utilities.scss
+++ b/src/scss/_globals/utilities.scss
@@ -355,6 +355,10 @@ main {
 			height: 17px;
 			transform: translate(-50%, -50%);
 		}
+
+		&.active {
+			opacity: .5;
+		}
 	}
 
 	.swiper-button-prev,
