--- a/src/_templates/index/i-10.pug
+++ b/src/_templates/index/i-10.pug
@@ -14,10 +14,10 @@ section.index-10(data-scroll-id="7")
 					.review-video
 						.block-video
 							.youtube-api(data-url="https://www.youtube.com/watch?v=_jQSP0y32Rk&feature=emb_title")
-						.content(data-bg="../assets/images/background/text-review-video.png")
+						.content(data-bg="./assets/images/background/text-review-video.png")
 							h3 Lorem ipsum dolor sit amet
 							p Lorem ipsum dolor sit amet, consectetuer adipiscing eli.
-							.date(data-bg="../assets/images/background/item-date-index-9.png") 28/05/20
+							.date(data-bg="./assets/images/background/item-date-index-9.png") 28/05/20
 		.block-2
 			.slider-thumnail-video
 				.swiper-container
@@ -26,44 +26,44 @@ section.index-10(data-scroll-id="7")
 							.item.active(data-url="https://www.youtube.com/watch?v=D4hAVemuQXY")
 								.img.ov-h
 									img.ofcv(src="./assets/images/items/index-9__1.png", alt="")
-								.text(data-bg="../assets/images/background/item_index-9.png")
+								.text(data-bg="./assets/images/background/item_index-9.png")
 									h3.lcl.lcl-1 Lorem ipsum dolor
-									.date(data-bg="../assets/images/background/item-date-index-9.png") 28/05/20
+									.date(data-bg="./assets/images/background/item-date-index-9.png") 28/05/20
 						.swiper-slide
 							.item(data-url="https://www.youtube.com/watch?v=D4hAVemuQXY")
 								.img.ov-h
 									img.ofcv(src="./assets/images/items/index-9__2.png", alt="")
-								.text(data-bg="../assets/images/background/item_index-9.png")
+								.text(data-bg="./assets/images/background/item_index-9.png")
 									h3.lcl.lcl-1 Lorem ipsum dolor
-									.date(data-bg="../assets/images/background/item-date-index-9.png") 28/05/20
+									.date(data-bg="./assets/images/background/item-date-index-9.png") 28/05/20
 						.swiper-slide
 							.item(data-url="https://www.youtube.com/watch?v=D4hAVemuQXY")
 								.img.ov-h
 									img.ofcv(src="./assets/images/items/index-9__3.png", alt="")
-								.text(data-bg="../assets/images/background/item_index-9.png")
+								.text(data-bg="./assets/images/background/item_index-9.png")
 									h3.lcl.lcl-1 Lorem ipsum dolor
-									.date(data-bg="../assets/images/background/item-date-index-9.png") 28/05/20
+									.date(data-bg="./assets/images/background/item-date-index-9.png") 28/05/20
 						.swiper-slide
 							.item(data-url="https://www.youtube.com/watch?v=D4hAVemuQXY")
 								.img.ov-h
 									img.ofcv(src="./assets/images/items/index-9__1.png", alt="")
-								.text(data-bg="../assets/images/background/item_index-9.png")
+								.text(data-bg="./assets/images/background/item_index-9.png")
 									h3.lcl.lcl-1 Lorem ipsum dolor
-									.date(data-bg="../assets/images/background/item-date-index-9.png") 28/05/20
+									.date(data-bg="./assets/images/background/item-date-index-9.png") 28/05/20
 						.swiper-slide
 							.item(data-url="https://www.youtube.com/watch?v=D4hAVemuQXY")
 								.img.ov-h
 									img.ofcv(src="./assets/images/items/index-9__2.png", alt="")
-								.text(data-bg="../assets/images/background/item_index-9.png")
+								.text(data-bg="./assets/images/background/item_index-9.png")
 									h3.lcl.lcl-1 Lorem ipsum dolor
-									.date(data-bg="../assets/images/background/item-date-index-9.png") 28/05/20
+									.date(data-bg="./assets/images/background/item-date-index-9.png") 28/05/20
 						.swiper-slide
 							.item(data-url="https://www.youtube.com/watch?v=D4hAVemuQXY")
 								.img.ov-h
 									img.ofcv(src="./assets/images/items/index-9__3.png", alt="")
-								.text(data-bg="../assets/images/background/item_index-9.png")
+								.text(data-bg="./assets/images/background/item_index-9.png")
 									h3.lcl.lcl-1 Lorem ipsum dolor
-									.date(data-bg="../assets/images/background/item-date-index-9.png") 28/05/20
+									.date(data-bg="./assets/images/background/item-date-index-9.png") 28/05/20
 				.list-btn-slider
 					.item.swiper-button-prev
 					.item.swiper-button-next
