--- a/src/_templates/index/i-2.pug
+++ b/src/_templates/index/i-2.pug
@@ -3,8 +3,8 @@ section.index-2(data-scroll-id="1" full-screen)
 		.swiper-container.w-100.h-100
 			.swiper-wrapper.w-100.h-100
 				.swiper-slide
-					.section(data-bg="../assets/images/background/index-2.1.png")
-						.block-content.mx-at(max-width='845px' data-bg="../assets/images/background/item_index-2__1.png")
+					.section(data-bg="./assets/images/background/index-2.1.png")
+						.block-content.mx-at(max-width='845px' data-bg="./assets/images/background/item_index-2__1.png")
 							.content.ta-c
 								.block-title.mx-at(max-width="600px")
 									h2.wow.fadeInLeft(data-wow-delay=".2s") GIÁ TRỊ DỰ ÁN
@@ -16,8 +16,8 @@ section.index-2(data-scroll-id="1" full-screen)
 								.desc.wow.fadeInLeft(data-wow-delay=".4s")
 									p Phát triển dựa trên những quy chuẩn kiến trúc khắt khe của sân Golf West Lakes - một sản phẩm của đơn vị thiết kế Thomson Perrett hàng đầu thế giới, chỉ cách trung tâm Tp.HCM chỉ hơn 30km nhưng quy tụ các tiện ích nội khu 5 sao đáp ứng nhu cầu nghỉ dưỡng xanh cao cấp của gia đình hiện đại.
 				.swiper-slide
-					.section(data-bg="../assets/images/background/index-2.2.png")
-						.block-content.ml-at(max-width='50%' border-right data-bg="../assets/images/background/item_index-2__1.png")
+					.section(data-bg="./assets/images/background/index-2.2.png")
+						.block-content.ml-at(max-width='50%' border-right data-bg="./assets/images/background/item_index-2__1.png")
 							.content.ta-c(left="40%" width="60%")
 								.block-title
 									h2(font-size="40px" no-after) Cộng đồng tinh hoa 
@@ -26,8 +26,8 @@ section.index-2(data-scroll-id="1" full-screen)
 								.desc
 									p.line-height--30px Không nằm giữa trung tâm đô thị phồn hoa dự án được quy hoạch và thiết kế dành riêng cho cộng đồng dân cư thông thái yêu thích nơi sống cách biệt chốn thị thành náo nhiệt và những tiêu chuẩn sống giành riêng cho giới trí thức West Lakes Gofl & Villas được kiến tạo để đáp ứng mọi nhu cầu khắt khe của một nơi an cư xứng đáng với vị thế vượt tầm của chủ nhân thành đạt. Mỗi biệt thự thiết kế tinh tế đến từng chi tiết chính là tuyên ngôn mạnh về phong cách sống ở tầm cao khác biệt tương ứng, xứng đáng với giá trị đầu tư.
 				.swiper-slide
-					.section(data-bg="../assets/images/background/index-2.3.png")
-						.block-content.ml-at(max-width='50%' border-right data-bg="../assets/images/background/item_index-2__3.png")
+					.section(data-bg="./assets/images/background/index-2.3.png")
+						.block-content.ml-at(max-width='50%' border-right data-bg="./assets/images/background/item_index-2__3.png")
 							.content.ta-c(left="40%" width="60%")
 								.block-title
 									h2(font-size="40px" no-after) Kiến trúc độc bản
@@ -36,8 +36,8 @@ section.index-2(data-scroll-id="1" full-screen)
 								.desc
 									p Kiến trúc độc bản - cảnh quan hoàn mỹ: Phía sau vẻ hào nhoáng của dãy biệt thự đẳng cấp là hàng trăm hecta thảm cỏ sân Golf xanh mướt chiếm trọn mọi tầm nhìn. Sự kế hợp hoàn hảo giữa vẻ đẹp kiến trúc và cảnh quan hoàn mỹ của West Lakes Golf & Villas sẽ là tuyệt phẩm dành riêng cho những chủ sở hữu xứng tầm.
 				.swiper-slide
-					.section(data-bg="../assets/images/background/index-2.4.png")
-						.block-content(max-width='50%' border-left data-bg="../assets/images/background/item_index-2__4.png")
+					.section(data-bg="./assets/images/background/index-2.4.png")
+						.block-content(max-width='50%' border-left data-bg="./assets/images/background/item_index-2__4.png")
 							.content.ta-c(left="40%" width="60%")
 								.block-title
 									h2(font-size="40px" no-after) Tiềm năng đầu tư
