--- a/src/_templates/index/i-5.pug
+++ b/src/_templates/index/i-5.pug
@@ -1,4 +1,4 @@
-section.index-5(data-scroll-id="3" data-bg="../assets/images/background/index-5.png")
+section.index-5(data-scroll-id="3" data-bg="./assets/images/background/index-5.png")
 	.block-content.ta-c.mx-at(max-width='50%')
 		.content
 			.block-title
