--- a/src/_templates/index/i-6.pug
+++ b/src/_templates/index/i-6.pug
@@ -1,13 +1,13 @@
-section.index-6(data-scroll-id="4" data-bg="../assets/images/background/index-6.png")
+section.index-6(data-scroll-id="4" data-bg="./assets/images/background/index-6.png")
 	.block-1
 		.container
 			.block-content.ta-c.mx-at(max-width='60%')
 				.content
 					.block-title
 						h2 CHƯƠNG TRÌNH BÁN HÀNG
-	.block-2(full-screen data-bg="../assets/images/background/index-6-block-2.png")
+	.block-2(full-screen data-bg="./assets/images/background/index-6-block-2.png")
 		.container.h-100
-			.block-content.h-100.mx-at(max-width='1088px' data-bg="../assets/images/background/item-index-6.png")
+			.block-content.h-100.mx-at(max-width='1088px' data-bg="./assets/images/background/item-index-6.png")
 				.content.ta-c
 					.price
 						h4 giá công khai chỉ từ
