--- a/src/_templates/index/i-7.pug
+++ b/src/_templates/index/i-7.pug
@@ -1,4 +1,4 @@
-section.index-7(data-bg="../assets/images/background/index-7.png")
+section.index-7(data-bg="./assets/images/background/index-7.png")
 	.container(max-width="1360px")
 		.block-content.mx-at
 			h2 GIẢI THƯỞNG ĐẶC BIỆT
