--- a/src/_templates/index/i-9.pug
+++ b/src/_templates/index/i-9.pug
@@ -14,48 +14,48 @@ section.index-9(data-scroll-id="6")
 							a(href="news-detail.html").item
 								.img.ov-h
 									img.ofcv(src="./assets/images/items/index-9__1.png", alt="")
-									.date(data-bg="../assets/images/background/item-date-index-9.png") 28/05/20
-								.text(data-bg="../assets/images/background/item_index-9.png")
+									.date(data-bg="./assets/images/background/item-date-index-9.png") 28/05/20
+								.text(data-bg="./assets/images/background/item_index-9.png")
 									h3.lcl.lcl-1 Lorem ipsum dolor
 									p.lcl.lcl-2 Lorem ipsum dolor sit amet, consectetuer adipiscing eli.
 						.swiper-slide
 							a(href="news-detail.html").item
 								.img.ov-h
 									img.ofcv(src="./assets/images/items/index-9__2.png", alt="")
-									.date(data-bg="../assets/images/background/item-date-index-9.png") 28/05/20
-								.text(data-bg="../assets/images/background/item_index-9.png")
+									.date(data-bg="./assets/images/background/item-date-index-9.png") 28/05/20
+								.text(data-bg="./assets/images/background/item_index-9.png")
 									h3.lcl.lcl-1 Lorem ipsum dolor
 									p.lcl.lcl-2 Lorem ipsum dolor sit amet, consectetuer adipiscing eli.
 						.swiper-slide
 							a(href="news-detail.html").item
 								.img.ov-h
 									img.ofcv(src="./assets/images/items/index-9__3.png", alt="")
-									.date(data-bg="../assets/images/background/item-date-index-9.png") 28/05/20
-								.text(data-bg="../assets/images/background/item_index-9.png")
+									.date(data-bg="./assets/images/background/item-date-index-9.png") 28/05/20
+								.text(data-bg="./assets/images/background/item_index-9.png")
 									h3.lcl.lcl-1 Lorem ipsum dolor
 									p.lcl.lcl-2 Lorem ipsum dolor sit amet, consectetuer adipiscing eli.
 						.swiper-slide
 							a(href="news-detail.html").item
 								.img.ov-h
 									img.ofcv(src="./assets/images/items/index-9__1.png", alt="")
-									.date(data-bg="../assets/images/background/item-date-index-9.png") 28/05/20
-								.text(data-bg="../assets/images/background/item_index-9.png")
+									.date(data-bg="./assets/images/background/item-date-index-9.png") 28/05/20
+								.text(data-bg="./assets/images/background/item_index-9.png")
 									h3.lcl.lcl-1 Lorem ipsum dolor
 									p.lcl.lcl-2 Lorem ipsum dolor sit amet, consectetuer adipiscing eli.
 						.swiper-slide
 							a(href="news-detail.html").item
 								.img.ov-h
 									img.ofcv(src="./assets/images/items/index-9__2.png", alt="")
-									.date(data-bg="../assets/images/background/item-date-index-9.png") 28/05/20
-								.text(data-bg="../assets/images/background/item_index-9.png")
+									.date(data-bg="./assets/images/background/item-date-index-9.png") 28/05/20
+								.text(data-bg="./assets/images/background/item_index-9.png")
 									h3.lcl.lcl-1 Lorem ipsum dolor
 									p.lcl.lcl-2 Lorem ipsum dolor sit amet, consectetuer adipiscing eli.
 						.swiper-slide
 							a(href="news-detail.html").item
 								.img.ov-h
 									img.ofcv(src="./assets/images/items/index-9__3.png", alt="")
-									.date(data-bg="../assets/images/background/item-date-index-9.png") 28/05/20
-								.text(data-bg="../assets/images/background/item_index-9.png")
+									.date(data-bg="./assets/images/background/item-date-index-9.png") 28/05/20
+								.text(data-bg="./assets/images/background/item_index-9.png")
 									h3.lcl.lcl-1 Lorem ipsum dolor
 									p.lcl.lcl-2 Lorem ipsum dolor sit amet, consectetuer adipiscing eli.
 				.list-btn-slider
