--- a/src/_templates/news-detail/n-1.pug
+++ b/src/_templates/news-detail/n-1.pug
@@ -4,7 +4,7 @@ section.news-detail
 			.col-md-9
 				.content
 					h1 Lorem Ipsum is simply dummy text of the printing and typesetting
-					.date(data-bg="../assets/images/background/item-date-index-9.png") 28/05/20
+					.date(data-bg="./assets/images/background/item-date-index-9.png") 28/05/20
 					.desc
 						img(src="./assets/images/news-detail/1.png", alt="")
 						p Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibus. Vivamus elementum semper nisi.
@@ -38,7 +38,7 @@ section.news-detail
 						.img
 							img.lazyload.blur-up.ofcv(data-src="./assets/images/news-detail/related/5.png", alt="")
 						.desc.lcl.lcl-2 Lorem Ipsum issimply dummy text of the printing industry.
-section.index-11.section-in-news-detail(data-bg="../assets/images/background/last-index.png")
+section.index-11.section-in-news-detail(data-bg="./assets/images/background/last-index.png")
 	.container(max-width="1360px")
 		.block-title.mx-at.ta-c(max-width='75%' no-after)
 			h2 LIÊN HỆ
