--- a/src/_templates/_layout/_layout.pug
+++ b/src/_templates/_layout/_layout.pug
@@ -24,6 +24,7 @@ html(lang="en")
 		block footer
 			include _footer
 		#overlay
+		script(type="text/javascript", src="https://www.youtube.com/iframe_api");
 		script(type="text/javascript", src="./js/core.min.js")
 		script(type="text/javascript", src="./js/main.min.js")
 		block scripts
