--- a/src/_templates/index/i-11.pug
+++ b/src/_templates/index/i-11.pug
@@ -20,10 +20,10 @@ section.index-11
 				.block-form
 					form(action="#")
 						.input-group
-							input(type="text" placeholder="Name")
+							input.form-control(type="text" placeholder="Name")
 						.input-group
-							input(type="text" placeholder="Email")
+							input.form-control(type="text" placeholder="Email")
 						.input-group
-							input(type="text" placeholder="Phone")
+							input.form-control(type="text" placeholder="Phone")
 						.submit
-							button gửi
+							button(data-url="/test") gửi
